# backonthelangchain

./: README.md  agentic_rag_flow.ipynb  agentic_rag_flow.py  github_lookup.ipynb  ica_rag_pipeline.ipynb  langchain1.ipynb  langgraph_reflection_agent.ipynb  pyproject.toml  react_news_summary_agent.ipynb  reflexion_agent.ipynb
examples/: run_safe_rag_support_router.py  run_safe_support_router.py  run_support_router.py
src/backonthelangchain/: __init__.py
src/backonthelangchain/agents/: __init__.py  graphs.py  models.py  nodes.py  prompts.py  schemas.py  tools.py
src/backonthelangchain/agents/services/: __init__.py  billing.py  router.py  safety.py  tech_support.py  tech_support_rag.py
src/backonthelangchain/rag/: __init__.py  chunking.py  embeddings.py  loaders.py  metadata.py  pipelines.py  prompts.py  rerankers.py  retrieval.py
src/backonthelangchain/rag/data/: tier1_tech_support_faq.md
src/backonthelangchain/utils/: env.py  tracing.py
tests/: test_router_imports.py
