[project]
name = "backonthelangchain"
version = "0.1.0"
description = "Personal sandbox for RAG, agents, and LangGraph patterns."
requires-python = ">=3.10,<3.14"
dependencies = [
    "langchain-core",
    "langchain-openai",
    "langgraph",
    "python-dotenv",
    "pydantic",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
]

rag = [
    "langchain-community",
    "faiss-cpu",
    "voyageai",
    "llama-index-core",
    "numpy>=1.26,<2.3",
]

notebooks = [
    "jupyter",
    "ipykernel",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 88